--- a/README
+++ b/README
@@ -15,11 +15,11 @@ follows:
 
 
 Make sure you don't run clean, as this will wipe the deploy/.svn/ folder.
-To deploy updated pages to the Pivot web site, now it'e enough to check in the built files.
+To deploy updated pages to the Pivot web site, now it's enough to check in the built files.
 
 
 Note that when regenerating the site, the version is taken from the build.properties file
-in pivot trunk, so for example during a web site maintenance/update:
+in the given pivot root folder (for example the trunk), so for example during a web site maintenance/update:
 change it back temporary to the current version published in the web site, 
 and finally revert local changes to that file.
 
